Bump maven.plugin.api.version from 3.9.6 to 3.9.8 (#683)
* Bump maven.plugin.api.version from 3.9.6 to 3.9.8

Bumps `maven.plugin.api.version` from 3.9.6 to 3.9.8.

Updates `org.apache.maven:maven-plugin-api` from 3.9.6 to 3.9.8
- [Release notes](https://github.com/apache/maven/releases)
- [Commits](https://github.com/apache/maven/compare/maven-3.9.6...maven-3.9.8)

Updates `org.apache.maven:maven-core` from 3.9.6 to 3.9.8
- [Release notes](https://github.com/apache/maven/releases)
- [Commits](https://github.com/apache/maven/compare/maven-3.9.6...maven-3.9.8)

Updates `org.apache.maven:maven-compat` from 3.9.6 to 3.9.8
- [Release notes](https://github.com/apache/maven/releases)
- [Commits](https://github.com/apache/maven/compare/maven-3.9.6...maven-3.9.8)

Updates `org.apache.maven:maven-artifact` from 3.9.6 to 3.9.8
- [Release notes](https://github.com/apache/maven/releases)
- [Commits](https://github.com/apache/maven/compare/maven-3.9.6...maven-3.9.8)

---
updated-dependencies:
- dependency-name: org.apache.maven:maven-plugin-api
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: org.apache.maven:maven-core
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: org.apache.maven:maven-compat
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: org.apache.maven:maven-artifact
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

* get rid of dependencies to commons

* fix compilation

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Ivan <iponomarev@mail.ru>